--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -1080,7 +1080,7 @@
    <widget class="QToolButton" name="buttonQuit">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>70</y>
       <width>101</width>
       <height>22</height>
@@ -1098,30 +1098,17 @@
    <widget class="QTextEdit" name="textEditLog">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>130</x>
       <y>20</y>
-      <width>441</width>
+      <width>661</width>
       <height>71</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>100</width>
-      <height>32</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Arial</family>
-      <pointsize>8</pointsize>
+      <pointsize>10</pointsize>
      </font>
-    </property>
-    <property name="text">
-     <string>Start</string>
     </property>
    </widget>
    <widget class="QFrame" name="frameFRAS">
@@ -1435,6 +1422,25 @@
      </property>
     </widget>
    </widget>
+   <widget class="QLabel" name="labelVersion">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
@@ -1592,22 +1598,6 @@
     <hint type="destinationlabel">
      <x>524</x>
      <y>137</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>pushButton</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>start()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>153</x>
-     <y>52</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>235</x>
-     <y>52</y>
     </hint>
    </hints>
   </connection>
